server-deployment/reverse-tunnels/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: chisel-server
  name: chisel-server
