server-deployment/reverse-tunnels/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-nginx-deployment
  namespace: chisel-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-nginx
  template:
    metadata:
      labels:
        app: api-nginx
    spec:
      serviceAccountName: chisel-register-sa
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: api
          image: lukaszbielinski/chisel-register-api
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-data
              mountPath: /data
          ports:
            - containerPort: 8080
        - name: nginx
          image: nginx
          volumeMounts:
            - name: shared-data
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-nginx-service
  namespace: chisel-server
spec:
  selector:
    app: api-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: api

  type: LoadBalancer
---
