server-deployment/reverse-tunnels/svc-reverse-tunnels.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: chisel-server-tunnel-transport@kubernetescrd
  name: chisel-tunnel
  namespace: chisel-server
spec:
  selector:
    app: chisel-server
  ports:
    - protocol: TCP
      port: 1111
      targetPort: 1111
      name: chisel-client-1
    - protocol: TCP
      port: 2222
      targetPort: 2222
      name: chisel-client-2
  type: ClusterIP
---
