server-deployment/reverse-tunnels/ingress-reverse-tunnels.yaml
---
# Middleware
# Strip prefix /client-x
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: client-x
  namespace: chisel-server
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /client-1
      - /client-2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: self-signed-issuer
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: chisel-server-client-x@kubernetescrd
  name: chisel-tunnel
  namespace: chisel-server

spec:
  rules:
  - host: chisel-tunnel.lan
    http:
      paths:
      - backend:
          service:
            name: chisel-tunnel
            port:
              number: 1111
        path: /client-1
        pathType: Prefix
      - backend:
          service:
            name: chisel-tunnel
            port:
              number: 2222
        path: /client-2
        pathType: Prefix
  tls:
  - hosts:
    - chisel-tunnel
    secretName: chisel-tunnel
---
